Fixed spacing issues

--- a/food/src/Sass/Frontpage.scss
+++ b/food/src/Sass/Frontpage.scss
@@ -34,8 +34,8 @@ $input-width:20vw;
 }
 
 .search-container{
-
   display: flex;
+
   form{
     display: inherit;
   }
@@ -63,8 +63,8 @@ $input-width:20vw;
     color:rgba(3, 150, 248, 0.144);
     pointer-events: none;
   }
-  .search:focus ~ .form-placeholder, .search:valid ~ .form-placeholder
-    {
+  .search:focus ~ .form-placeholder,
+  .search:valid ~ .form-placeholder{
       color:rgb(3, 150, 248);
       font-size: 0.75em;
       top:0;
@@ -73,7 +73,7 @@ $input-width:20vw;
   i{
     color:white;
     transition: all 1.2s ease;
-  }
+   }
   .icon-animation{
     animation: translateX 5s;
   }
@@ -138,10 +138,10 @@ $input-width:20vw;
 @media only screen and (max-width: 640px) {
   .search-container{
     display:block;
-  input{
-    margin:auto;
-    width:60vw;
-  }
+    input{
+      margin:auto;
+      width:60vw;
+    }
   }
 
   .input-container{
@@ -151,6 +151,5 @@ $input-width:20vw;
 
   #btn-submit{
     margin:10px auto 10px auto;
-
   }
 }
